[gd_scene load_steps=11 format=3 uid="uid://bntrpn65rgcrn"]

[ext_resource type="Script" uid="uid://dxumtt8f8tsh3" path="res://scenes/screens/main_menu.gd" id="1_1g8jr"]
[ext_resource type="Theme" uid="uid://c4i4u4nfq0qt3" path="res://resources/dino_run_theme.tres" id="2_1g8jr"]
[ext_resource type="PackedScene" uid="uid://ds723w14t5x34" path="res://scenes/screens/dino_select.tscn" id="2_e21yp"]
[ext_resource type="Texture2D" uid="uid://bd1ksl5o8q8hq" path="res://assets/graphics/background/plx-1.png" id="3_e21yp"]
[ext_resource type="Texture2D" uid="uid://c1kdx4s6g1rs" path="res://assets/graphics/dinos/DinoSprites - mort.png" id="4_m1kxf"]
[ext_resource type="Texture2D" uid="uid://cqewj18mmrl3n" path="res://assets/graphics/background/plx-3.png" id="4_vp5vp"]
[ext_resource type="Texture2D" uid="uid://c8arwgvlendmm" path="res://assets/graphics/title/tiny_dino_run.png" id="5_gqnmn"]

[sub_resource type="Animation" id="Animation_x2yvf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_m1kxf"]
resource_name = "default"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uhagc"]
_data = {
&"RESET": SubResource("Animation_x2yvf"),
&"default": SubResource("Animation_m1kxf")
}

[node name="Main Menu" type="Node"]
process_mode = 1
script = ExtResource("1_1g8jr")
dino_selection = ExtResource("2_e21yp")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_e21yp")

[node name="Background2" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_vp5vp")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(420, 420)
layout_mode = 2
texture = ExtResource("5_gqnmn")
expand_mode = 3
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SelectionIcon" type="Sprite2D" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(-10, -488)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_m1kxf")
centered = false
hframes = 24
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/VBoxContainer/SelectionIcon"]
libraries = {
&"": SubResource("AnimationLibrary_uhagc")
}
autoplay = "default"

[node name="LblStart" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_1g8jr")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 30
text = "START"
horizontal_alignment = 1

[node name="LblOptions" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_1g8jr")
theme_override_colors/font_color = Color(0.7607843, 0.5019608, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 30
text = "OPTIONS"
horizontal_alignment = 1

[node name="LblExit" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("2_1g8jr")
theme_override_colors/font_color = Color(0.7607843, 0.5019608, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 30
text = "EXIT"
horizontal_alignment = 1
